# gmc_lss_rotfil_repo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: synth_galaxies.csv
docs/: state_model.md
gmc_lss/: __init__.py  alignment.py  constants.py  coords.py  gmc.py  metrics.py  spin.py  synth.py
gmc_lss_rotfil_repo/data/: example_galaxies.csv
gmc_lss_rotfil_repo/gmc_lss/: cli.py  io.py  rotation.py  spine.py
tests/: test_pipeline.py
